--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,8 @@ nav ul li a:hover {
   color: #008080;
   font-weight: bold;
   font-size: 1em;
-  border: 2px solid #90C695;
+  border-color: rgba(0, 128, 221, 1);
+  border: 2px solid;
   border-radius: 4px;
   cursor: pointer;
   padding-top:10px;
@@ -110,9 +111,7 @@ nav ul li a:hover {
 }
 
 .contact {
-  /*   height:800px; */
-  /*   min-height:800px; */
-  background: #C8F7C5;
+  background: rgba(0, 128, 221, 0.2);
   padding-bottom: 160px;
 }
 
@@ -125,7 +124,8 @@ nav ul li a:hover {
   font-weight: bold;
   margin: 0 35px 45px 35px;
   list-style-type: none;
-  border: 2px solid #90C695;
+  border-color: rgba(0, 128, 221, 1);
+  border: 2px solid;
   border-radius: 100%;
   width: 100px;
   height: 100px;
@@ -148,7 +148,7 @@ footer {
 }
 
 footer a {
-  color: white;
+  color: #0080DD;
 }
 
 @media only screen and (max-width: 367px) {
